refactor: refactoring all projects